--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,7 @@ frontend:
     build:
       commands:
         - npm run build
+        - npx next export
   artifacts:
     baseDirectory: out
     files:
