Landing Page Bug Fix

--- a/amplify.yml
+++ b/amplify.yml
@@ -7,9 +7,8 @@ frontend:
     build:
       commands:
         - npm run build
-        - npx next export
   artifacts:
-    baseDirectory: out
+    baseDirectory: .next
     files:
       - "**/*"
   cache:
